# SmartSave-AMLMod

./: CMakeLists.txt  README.md
include/: logger.h
include/mod/: config.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.hpp
src/Game/: AutoSave.cpp  AutoSave.hpp
